@@ -336,7 +336,7 @@ void GameStatePlay::checkTeleport() {
 			inpt->lock_all = (teleport_mapname == "maps/spawn.txt");
 			mapr->executeOnMapExitEvents();
 			showLoading();
-			save_load->saveGame();
+			save_load->saveFOW(); // TODO handle save_onload/save_onexit?
 			mapr->load(teleport_mapname);
 			setLoadingFrame();
 
