@@ -248,40 +248,8 @@ void SaveLoad::saveGame() {
 		}
 	}
 
-	// Save fow dark layer
-	if (mapr->fogofwar && mapr->save_fogofwar && !mapr->getFilename().empty() && fow->dark_layer_id < mapr->layernames.size()) {
-		ss.str("");
-		ss << settings->path_user << "saves/" << eset->misc.save_prefix << "/" << game_slot << "/fow/" << Utils::hashString(mapr->getFilename()) << ".txt";
-
-		outfile.open(Filesystem::convertSlashes(ss.str()).c_str(), std::ios::out);
-
-		if (outfile.is_open()) {
-			outfile << "# " << mapr->getFilename() << std::endl;
-			outfile << "[layer]" << std::endl;
-			outfile << "type=" << mapr->layernames[fow->dark_layer_id] << std::endl;
-			outfile << "data=" << std::endl;
-
-			std::string layer = "";
-			for (int line = 0; line < mapr->h; line++) {
-				std::stringstream map_row;
-				for (int tile = 0; tile < mapr->w; tile++) {
-					unsigned short val = mapr->layers[fow->dark_layer_id][tile][line];
-					map_row << val << ",";
-				}
-				layer += map_row.str();
-				layer += '\n';
-			}
-			layer.erase(layer.end()-2, layer.end());
-			layer += '\n';
-			outfile << layer << std::endl;
-
-			if (outfile.bad()) Utils::logError("SaveLoad: Unable to save map data. No write access or disk is full!");
-			outfile.close();
-			outfile.clear();
-
-			platform.FSCommit();
-		}
-	}
+	// save fog-of-war layers
+	saveFOW();
 
 	// Save extended Items
 	ss.str("");
@@ -716,4 +684,45 @@ void SaveLoad::loadPowerTree() {
 
 	// fall back to the default power tree
 	menu->pow->loadPowerTree("powers/trees/default.txt");
+}
+
+void SaveLoad::saveFOW() {
+	std::ofstream outfile;
+	std::stringstream ss;
+
+	// Save fow dark layer
+	if (mapr->fogofwar && mapr->save_fogofwar && !mapr->getFilename().empty() && fow->dark_layer_id < mapr->layernames.size()) {
+		ss.str("");
+		ss << settings->path_user << "saves/" << eset->misc.save_prefix << "/" << game_slot << "/fow/" << Utils::hashString(mapr->getFilename()) << ".txt";
+
+		outfile.open(Filesystem::convertSlashes(ss.str()).c_str(), std::ios::out);
+
+		if (outfile.is_open()) {
+			outfile << "# " << mapr->getFilename() << std::endl;
+			outfile << "[layer]" << std::endl;
+			outfile << "type=" << mapr->layernames[fow->dark_layer_id] << std::endl;
+			outfile << "data=" << std::endl;
+
+			std::string layer = "";
+			for (int line = 0; line < mapr->h; line++) {
+				std::stringstream map_row;
+				for (int tile = 0; tile < mapr->w; tile++) {
+					unsigned short val = mapr->layers[fow->dark_layer_id][tile][line];
+					map_row << val << ",";
+				}
+				layer += map_row.str();
+				layer += '\n';
+			}
+			layer.erase(layer.end()-2, layer.end());
+			layer += '\n';
+			outfile << layer << std::endl;
+
+			if (outfile.bad()) Utils::logError("SaveLoad: Unable to save map data. No write access or disk is full!");
+			outfile.close();
+			outfile.clear();
+
+			platform.FSCommit();
+		}
+	}
+
 }
